DOMjudge Programming Contest Judging System

Version 2.1.3 - SVN
-------------------
 - Fix query bug causing max 1 category with 0 participants to be
   displayed (Closes: #1819621, thanks Maks Verver)

Version 2.1.2 - 22 October 2007
-------------------------------
 - Reduced verbose level in submitdaemon.
 - Fix 'NONINTERACTIVE' undefined (Closes: #1814594, thanks Maks Verver)
 - Fix bug in contests.php in unfreezing scoreboard.

Version 2.1.1 - 16 October 2007
-------------------------------
 - Implement syslog logging (for PHP and shell scripts).
 - Fix typo in jury/submission.php causing a parse error when using
   PHP4 (Closes: #1808259, thanks mhil@fmf.nl).
 - Fix team unread clarification count to work cross-contest.
 - Update not the public, but the jury scoreboard after freeze.
 - Fix poblem colour input field to match its size in the database.
 - The colors of the problems are now shown in the jury problems overview
   (Closes: #1808308).
 - Improve contrast of default team category colours.
 - Some improvements to admin manual including submission diagram.
 - Fix in scoreboard to disable linebreak between affiliation/country icons.
 - Do not try to check SSL certificates in submitclient to webinterface.
 - Fix homedir lookup problem in submitdaemon when team passwd data is not
   available locally.
 - Add better machine parsing support in websubmit interface.
 - Lowered syslog levels in test_solution.sh.

Version 2.1.0 - 5 September 2007
--------------------------------
 - Drop tempfile and mkstemps binaries, they are not necessary.
 - Change runguard license to GPL 2 or higher. The current code
   is a different implementation of the original idea from timeout.
 - Make shell scripts /bin/sh where possible, set them to bash
   where we rely on bash-specific features.
 - Fixes to judge/compare.c for better handling of strange newlines and
   printing first difference summary as first line.